--- a/EventosUptc/package.json
+++ b/EventosUptc/package.json
@@ -26,6 +26,7 @@
     "@ionic/angular": "^4.7.1",
     "core-js": "^2.5.4",
     "rxjs": "~6.5.1",
+    "rxjs-compat": "^6.4.0",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
   },
@@ -37,6 +38,7 @@
     "@angular/cli": "~8.1.2",
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
+    "@angular/http": "^7.2.15",
     "@angular/language-service": "~8.1.2",
     "@ionic/angular-toolkit": "~2.0.0",
     "@types/jasmine": "~3.3.8",
